--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -10,54 +10,80 @@ body {
   overflow-x: hidden;
 }
 
-/* #docForm{
-  font: 1.5rem;
-}
-
-.button-type-1{
-  padding: 1rem;
-  font: 1.5rem;
-  border-radius: 3px;
-} */
-
 .content {
   padding-top: 5rem;
 }
 
-/* .upload-container{
-  padding: 5rem;
-  margin: 15rem auto;
-  width: 30%;
-  text-align: center;
-  border: 2px solid white;
-  border-radius: 3px;
-} */
-
-button {
-  background-color: #d33349;
+.heading {
+  color: rgb(248, 82, 82);
+  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+  font-size: 2rem;
+  text-decoration: underline;
+  text-underline-offset: 7px;
 }
 
-.Navbar {
+.subheading-1 {
+  color: rgb(248, 82, 82);
+  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+  font-size: 1.5rem;
+  text-decoration: underline;
+  text-underline-offset: 7px;
+}
+
+.primary-button {
+  background-color: red;
+  border-radius: 2rem;
+  font-size: 1rem;
+  margin-top: 5rem;
+  padding: 1rem;
+  text-decoration: none;
+  width: 10rem;
+}
+
+.secondary-button {
+  background-color: #d33348;
+  text-decoration: none;
+  font-size: 1rem;
+  padding: 0.5rem;
+  border-radius: 2rem;
+  border-color: transparent;
+  width: 100%;
+  transition: all 300ms ease-in-out;
+}
+
+.primary-button:hover {
+  scale: 115%;
+  cursor: pointer;
+}
+
+.secondary-button:hover {
+  background-color: rgb(55, 223, 29);
+  cursor: pointer;
+  transform: scale(1.1);
+}
+
+.navbar {
   background-color: #d33349;
-  position: fixed;
-  z-index: 999;
-  float: top;
-  top: 0;
   display: grid;
+  float: top;
   grid-template-columns: repeat(4, 1fr) 4fr;
-  padding: 1rem 2rem;
-  transition: all 400ms ease;
-  width: 100%;
-  font-weight: bold;
-  letter-spacing: 1px;
+  letter-spacing: 0.1rem;
+  position: fixed;
+  padding: 1%;
+  top: 0;
+  transition: all 500ms ease;
+  width: 100vw;
+  z-index: 999;
 }
 
-.Navbar.active {
-  position: absolute;
+.navbar-link {
+  font-size: 1rem;
+  text-decoration: none;
+}
+
+.navbar.active {
   background: transparent;
-  z-index: 999;
-  top: 0;
-  width: 100%;
+  position: absolute;
 }
 
 .nav-1 {
@@ -65,73 +91,40 @@ button {
 }
 
 .nav-2 {
+  align-items: center;
+  align-self: right;
   display: flex;
   flex-direction: row;
   justify-content: space-evenly;
-  align-items: center;
-  gap: 1.5rem;
-  align-self: right;
-}
-
-.nav-2 a {
-  text-decoration: none;
-  font-size: 1rem;
+  gap: 5%;
 }
 
 .nav-2 button{
-  font-weight: bold;
-  background-color: #d33348;
-  text-decoration: none;
-  font-size: 1rem;
-  padding: 1rem;
-  border-radius: 2rem;
-  border-color: transparent;
-}
-.poster-info button {
-  text-decoration: none;
-  font-size: 0.8rem;
-  padding: 1rem;
-  border-radius: 2rem;
-  background-color: red;
-}
-
-.nav-2 button:hover {
-  background-color: #282c34;
+  width: fit-content;
 }
 
 .poster {
-  display: flex;
-  background-color: rgba(116, 116, 115, 0.15);
   background: linear-gradient(rgba(0, 0, 0, 0.9), rgba(0, 0, 0, 0.4)), url(https://helios-i.mashable.com/imagery/articles/02wTikGJ5ibx559DJk5xNWU/hero-image.fill.size_1248x702.v1623389209.png);
   background-repeat: no-repeat;
   background-size: cover;
+  display: flex;
+  font-size: 2rem;
   height: 80vh;
   padding: 10% 10%;
-  font-size: 2rem;
 }
-
 
 .poster-info {
   background: transparent;
 }
 
-.bestseller {
-  margin: 2% 5%;
+.explore-sec {
+  display:flex;
+  flex-direction: column;
+  gap: 2rem;
+  margin: 2% 2%;
 }
 
-.bestseller-1 {
-  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-  font-size: 1.5rem;
-  margin-bottom: 2rem;
-  color: rgb(248, 82, 82);
-  border-radius: 0.5rem;
-  width: max-content;
-  padding: 0.2rem;
-  text-decoration: underline;
-  text-underline-offset: 7px;
-}
-
-.bestseller-2 {
+.books-sec {
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
@@ -161,33 +154,12 @@ button {
   line-height: 1.5rem;
 }
 
-.book-card button {
-  cursor: pointer;
-  border-radius: 2rem;
-  padding: 0.5rem;
-  transition: all 300ms ease-in-out;
-  width: 100%;
-}
-
-.poster-info button {
-  margin-top: 5rem;
-  width: 10rem;
-  font-size: 1rem;
-}
-
-.poster-info button:hover {
-  cursor: pointer;
-}
-
 .poster-info span {
   color: rgb(255, 104, 104);
 }
 
-.book-card button:hover {
-  background-color: rgb(75, 202, 66);
-  transform: scale(1.1);
-}
 
+/* media query */
 @media only screen and (max-width: 600px) {
   .poster {
     font-size: 1rem;
@@ -209,11 +181,11 @@ button {
     display: none;
   }
 
-  .Navbar {
+  .navbar {
     padding: 1rem 1rem;
   }
 
-  .Navbar button {
+  .navbar button {
     display: none;
   }
 
@@ -235,18 +207,8 @@ button {
     font-size: 0.5rem;
   }
 
-  .bestseller {
-    margin: 0.5rem;
-  }
-
   .book-card {
-    display: flex;
-    flex-wrap: wrap;
-    flex-direction: column;
-    text-align: left;
     width: 100%;
-    height: 100%;
-    justify-content: space-between;
   }
 
   .book-card h2 {
@@ -259,19 +221,22 @@ button {
 
   .book-card img {
     height: 25vh;
-
   }
 
-  .bestseller-2 {
+  .books-sec {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     justify-items: center;
-    justify-content: space-between;
+    column-gap: 0.7rem;
+    row-gap: 3rem;
   }
+
   .poster{
     padding-top: 50%;
   }
+
   .poster-info button{
     font-size: 0.8rem;
   }
+
 }
