--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -28,6 +28,7 @@ body {
   font-size: 1.5rem;
   text-decoration: underline;
   text-underline-offset: 7px;
+  margin-left: 2%;
 }
 
 .primary-button {
@@ -121,7 +122,7 @@ body {
   display:flex;
   flex-direction: column;
   gap: 2rem;
-  margin: 2% 2%;
+  margin: 2% auto;
 }
 
 .books-sec {
@@ -130,7 +131,8 @@ body {
   flex-wrap: wrap;
   column-gap: 2.5rem;
   row-gap: 5rem;
-  justify-content: space-between;
+  justify-content:space-around;
+  /* margin: auto; */
 }
 
 .book-card {
