--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -160,6 +160,13 @@ body {
   color: rgb(255, 104, 104);
 }
 
+.counter{
+  text-align: center;
+  padding: 2rem 0;
+  line-height: 2rem;
+  font-size: larger;
+}
+
 
 /* media query */
 @media only screen and (max-width: 600px) {
